# Gift

./: Cargo.toml
benches/: gift128enc.rs
src/: consts.rs  gift.rs  gift128.rs  key_schedule.rs  lib.rs  primitives.rs
tests/: test.rs
